feat: delete funs
