# internal/routes/routes.go
@@ -72,12 +72,15 @@ func SetupRouter(application *app.App) (*gin.Engine, error) {
 		// Records
 		api.POST("/records/photos", recordHandler.CreatePhoto)
 		api.PUT("/records/photos/:id", recordHandler.UpdatePhoto)
+		api.DELETE("/records/photos/:id", recordHandler.DeletePhoto)
 		api.GET("/records/photos", recordHandler.GetPhotos)
 		api.POST("/records/notes", recordHandler.CreateNote)
 		api.PUT("/records/notes/:id", recordHandler.UpdateNote)
+		api.DELETE("/records/notes/:id", recordHandler.DeleteNote)
 		api.GET("/records/notes", recordHandler.GetNotes)
 		api.POST("/records/wishlist", recordHandler.CreateWishlist)
 		api.PUT("/records/wishlist/:id", recordHandler.UpdateWishlist)
+		api.DELETE("/records/wishlist/:id", recordHandler.DeleteWishlist)
 		api.GET("/records/wishlist", recordHandler.GetWishlist)
 		api.PUT("/records/wishlist/:id/complete", recordHandler.CompleteWishlist)
 		api.PUT("/records/wishlist/:id/incomplete", recordHandler.IncompleteWishlist)
